# python-template

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
